[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nvmaps"
version = "0.1"
authors = [{ name = "Igor Maliuk", email = "tigormal@gmail.com" }]
description = "Little map library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "shapely",
    "dataclass_wizard",
    "addict",
    "numpy",
    "PyDispatcher",
    "watchdog",
    "colorlog",
]


[tool.setuptools]
packages = ["nvmaps"]
